Map in workout view page, update workout uploading code

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,9 @@
+@import "leaflet";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.leaflet-attribution-flag {
+    visibility: hidden !important;
+    display: none !important;
+}
