Site: Dark theme for map and comments

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,3 +12,11 @@ html {
     visibility: hidden !important;
     display: none !important;
 }
+
+:root {
+    --map-tiles-filter: brightness(0.6) invert(1) contrast(3) hue-rotate(200deg) saturate(0.3) brightness(0.7);
+}
+
+.map-tiles-dark {
+    filter:var(--map-tiles-filter, none);
+}
