--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@plugin "@tailwindcss/typography";
 
 html {
     font-family: Ubuntu, Roboto, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont;
